<resources>
    <string name="app_name">Funne</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="beranda">Beranda</string>
    <string name="analisis">Analisis</string>
    <string name="pindai">Pindai</string>
    <string name="saran">Saran</string>
    <string name="scanning_bahan">Scanning Bahan</string>
    <string name="text_scanning">Kenali bahan skincare kamu dengan baik, temukan bahan pemicu fungal acne!</string>
    <string name="add_a_photo">Add a photo</string>
    <string name="detail_photo">Insert Photo</string>
    <string name="scan">Scan</string>
    <string name="profile_image">Profile Image</string>
    <string name="profile">Profile</string>
    <string name="nama_user">Nama User</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="capture_image">Capture Image</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="membuat_akun">Membuat Akun</string>
    <string name="sambutan_register">Daftarkan akun anda segera untuk dapat menikmati layanan kami</string>
    <string name="nama">Nama</string>
    <string name="logo">logo</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="sambutan_login">Silahkan masuk menggunakan akun anda</string>
    <string name="analisis_bahan">Analisis Bahan</string>
    <string name="sambutan_fragment">Silahkan masukkan ingredients dari skincare yang akan di analisis.</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="masuk">Masuk</string>
    <string name="lupa_password">Lupa password?</string>
    <string name="tidak_punya_akun">Tidak punya akun?</string>
    <string name="daftar">Daftar</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="login_success">Selamat, Anda Berhasil Login</string>
    <string name="login_error">Login Gagal. Silahkan Coba Lagi</string>
    <string name="register_success">Selamat, Akun Berhasil Dibuat</string>
    <string name="register_error">Gagal Register. Silahkan Coba Lagi</string>
    <string name="masukkan_bahan_skincare">Masukkan bahan skincare</string>
    <string name="hai">Hai,</string>
    <string name="username">John Doe</string>
    <string name="rekomendasi_produk">Rekomendasi Produk</string>
    <string name="lihat_semua">Lihat Semua</string>
    <string name="riwayat">Riwayat</string>
    <string name="keluar">Keluar</string>
    <string name="tips_and_trick">Tips and Trick</string>
    <string name="sambutan_suggestion">Lakukan cara ini apabila kamu ingin terhindar dari fungal acne</string>
    <string name="mencuci_muka">Mencuci Muka</string>
    <string name="bilas_wajah_hingga_bersih">Bilas wajah hingga bersih</string>
    <string name="lakilaki">Laki-Laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="image_uploaded">Image Berhasil Di Upload</string>
    <string name="error_upload_image">Gambar Gagal Di Upload</string>
    <string name="error_scanning_image">Gagal Scan Image</string>
    <string name="bahan_terindikasi">Bahan Terindikasi</string>
    <string name="penyebab_fungal_acne">Penyebab Fungal Acne</string>
    <string name="_2_24">2/24</string>
    <string name="nama_ingredients">Nama Ingredients</string>
    <string name="bahan_ke">Bahan Ke -</string>
    <string name="scan_ulang">Scan Ulang</string>
    <string name="name_ingredients">Name Ingredients</string>
    <string name="solusi">Solusi</string>
    <string name="deskripsi_solusi">Deskripsi Solusi</string>
    <string name="riwayat_scanning">Riwayat Scanning</string>
    <string name="beberapa_hasil_scanning_yang_pernah_anda_lakukan">Beberapa hasil scanning yang pernah anda lakukan</string>
    <string name="ingredients">Ingredients</string>
    <string name="content_description_media">Deskripsi Gambar</string>
    <string name="history">History</string>
    <string name="daftar_ingredients">Daftar Ingredients</string>
    <string name="bahan_skincare">Bahan Skincare</string>
    <string name="dibuat">Dibuat :</string>
    <string name="bebas_fungal_acne">Bebas Fungal Acne</string>
</resources>