<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.LoginActivity"
    android:background="@color/white"
    android:layout_marginStart="25dp"
    android:layout_marginEnd="25dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:src="@drawable/funne_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/title"
        android:contentDescription="@string/logo" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/selamat_datang"
        android:textColor="@color/slightly_blue"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/sambutan" />

    <TextView
        android:id="@+id/sambutan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:gravity="center_horizontal"
        android:text="@string/sambutan_login"
        android:textSize="17sp"
        android:layout_marginBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/etEmail" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/baseline_alternate_email_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        android:layout_marginBottom="7.5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:boxStrokeColor="@color/slightly_blue"
        app:startIconTint="@color/slightly_blue"
        android:textColorHint="@color/grey_text"
        app:hintTextColor="@color/slightly_blue"
        android:inputType="textEmailAddress"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/baseline_lock_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        android:layout_marginTop="7.5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:boxStrokeColor="@color/slightly_blue"
        app:startIconTint="@color/slightly_blue"
        android:textColorHint="@color/grey_text"
        app:hintTextColor="@color/slightly_blue"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/slightly_blue"
        android:hint="@string/password">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins"
        android:text="@string/lupa_password"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintEnd_toEndOf="@id/etPassword"
        app:layout_constraintStart_toStartOf="@id/etPassword"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/slightly_blue"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/masuk"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password" />

    <TextView
        android:id="@+id/tv_tidak_punya_akun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/tidak_punya_akun"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:layout_marginEnd="10dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@id/tv_register"
        app:layout_constraintStart_toEndOf="@id/tv_register"
        app:layout_constraintTop_toBottomOf="@id/btn_login" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/daftar"
        android:textColor="@color/slightly_blue"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/btn_login"
        app:layout_constraintStart_toEndOf="@id/tv_tidak_punya_akun"
        app:layout_constraintTop_toBottomOf="@id/btn_login" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:indicatorColor="@color/slightly_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>