<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.ProfileFragment"
    android:layout_marginStart="25dp"
    android:layout_marginEnd="25dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="@color/slightly_blue"
            android:textAlignment="center"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/poppinsbold"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white">

                <ImageView
                    android:id="@+id/iv_profile"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    tools:src="@tools:sample/avatars"
                    android:contentDescription="@string/profile_image" />

                <TextView
                    android:id="@+id/tv_name_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/nama_user"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:fontFamily="@font/poppinsbold"
                    android:textColor="@color/slightly_blue" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cornerRadius="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:backgroundTint="@color/slightly_blue"
            android:layout_marginTop="20dp"
            android:text="@string/riwayat"
            android:fontFamily="@font/poppinsbold"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cornerRadius="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:backgroundTint="@color/coral_red"
            android:layout_marginTop="20dp"
            android:text="@string/keluar"
            android:fontFamily="@font/poppinsbold"/>

    </LinearLayout>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:indicatorColor="@color/slightly_blue"
        android:layout_gravity="center" />
</FrameLayout>